# Farm-Automatica-De-Otica

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  create_phase1_issues.sh  create_phase2_to_6_issues.sh  docker-compose.yml  pyproject.toml  stores_template.csv
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 9e7ee9fcdeb0_create_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/models/: __init__.py  category.py  establishment.py  review.py
backend/tests/: test_schema.py
frontend/: package.json
frontend/app/: layout.tsx  page.tsx
frontend/lib/: api.ts
otica_scripts/: cli.py  config.py  evolution_sender.py  message_tracker.py  scraper.py  store.py  web_ui.py  whatsapp_sender.py
templates/: index.html
tests/: conftest.py  test_cli.py  test_evolution_sender.py  test_infrastructure.py  test_message_tracker.py  test_scraper.py  test_store.py  test_web_ui.py  test_whatsapp_sender.py
